<resources>
    <string name="app_name">GORE GRANT</string>
    <string name="app_tag">There is no great joy than saving a soul</string>
    <string name="title_activity_sign_up_and__sign_in">Sign_up_and_Sign_in</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="phone">Mobile No</string>
    <string name="loading">Loading...</string>
    <string name="email">Email Id</string>
    <string name="submit">Submit</string>
    <string name="text_signIn">Already a member? Sign in</string>
    <string name="verification">verification</string>
    <string name="confirm_code">You will get SMS with a confirmation code to this number.</string>
    <string name="resend">Resend OTP?</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="blood_grp">Blood Group</string>
    <string name="blood_units">Blood Units</string>
    <string name="donor_msg">Message to Donors</string>
    <string name="dob">DOB</string>
    <string name="request">Request</string>
    <string name="cancel">Cancel</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="timings">Timings(optional)</string>
    <string name="hours">Hours</string>
    <string name="emails">Emails</string>
    <string name="notifications">Notifications</string>
    <string name="availability">Availability</string>
    <string name="available">Available</string>
    <string name="sms">SMS</string>
    <string name="country">India</string>
    <string name="city">City</string>
    <string name="blood_grp_required">Blood Group Required: </string>
    <string name="blood_request_created_by">Blood Request created by: </string>
    <string name="donate_at">Donate At: </string>
    <string name="donated_at">Donated At: </string>
    <string name="date">Date: </string>
    <string name="call">Call</string>
    <string name="report">Report</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="add_request">Add Request</string>
    <string name="see_request">See Requests</string>
    <string name="Guidelines">Guidelines</string>
    <string name="my_record">My Record</string>
    <string name="username">Username</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="save">save</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="over_all_health">1.Overall health</string>
    <string name="age_and_weight">2.Age and weight</string>
    <string name="pulse_rate">3.Pulse rate</string>
    <string name="hemoglobin_level">4.Hemoglobin level</string>
    <string name="diastolic">Diastolic: 50–100 mm Hg</string>
    <string name="systolic">Systolic: 100–180 mm Hg</string>
    <string name="body_temperature">6.Body temperature</string>
    <string name="time_period">7.Time Period</string>
    <string name="blood_pressure">5.Blood pressure</string>
    <string name="guidelines">Following guidelines laid down by the Ministry of Health, Government of India have to be followed by an individual donating blood: </string>
    <string name="over_all_health_text">The donor must be fit and healthy, and should not be suffering from transmittable diseases.</string>
    <string name="age_and_weight_text">The donor must be 18–65 years old and should weigh a minimum of 50 kg.</string>
    <string name="pulse_rate_text">Between 50 and 100 without irregularities.</string>
    <string name="hemoglobin_text">A minimum of 12.5 g/dL.</string>
    <string name="body_temperature_text">Should be normal, with an oral temperature not exceeding 37.5 °C.</string>
    <string name="time_period_text">The time period between successive blood donations should be more than 3 months.</string>
    <string name="guideline2">Individuals under certain conditions are deemed ineligible to donate blood:</string>
    <string name="guideline3">1.A person who has been tested HIV positive.</string>
    <string name="guideline4">2.Individuals suffering from ailments like cardiac arrest, hypertension, blood pressure, cancer, epilepsy, kidney ailments and diabetes.</string>
    <string name="guideline5">3.A person who has undergone ear/body piercing or tattoo in the past 6 months.</string>
    <string name="guideline6">4.Individuals who have undergone immunization in the past 1 month.</string>
    <string name="guideline7">5.Individuals treated for rabies or received Hepatitis B vaccine in the past 6 months.</string>
    <string name="guideline8">6.A person who has consumed alcohol in the past 24 hours.</string>
    <string name="guideline9">7.Women who are pregnant or breastfeeding.</string>
    <string name="guideline10">8.Individuals who have undergone major dental procedures or general surgeries in the past 1 month.</string>
    <string name="guideline11">9.Women who have had miscarriage in the past 6 months.</string>
    <string name="guideline12">10.Individuals who have had fits, tuberculosis, asthma and allergic disorders in the past.</string>

    <string name="district">District</string>
    <string name="pinCode">Pin Code</string>
    <string name="register">Register</string>
    <string name="details">Details</string>
    <string name="details_fill">Please fill in your personal details</string>
    <string name="term_1">Available in case of emergency</string>
    <string name="term_2">I authorize this app and state that I am above 18 years of age</string>
    <string name="term_3">I agree to display my details so that the nearby needy can contact me.</string>
    <string name="term_4">I agree to the <underline><bold> terms and conditions</bold></underline>.</string>
    <string name="cond_1">1. People registering on this site must understand that the information provided by them on the registration page is available to a person seeking for a particular blood group.</string>
    <string name="cond_2">2. We do not sell contact details of potential donors to any third party or use it in any way for commercial gains.</string>
    <string name="cond_3">3. We does not arrange for blood. We only provide relevant information about potential donors to those in need of blood.</string>
    <string name="cond_4">4. We do not have a blood bank and is not affiliated to any blood bank.</string>
    <string name="cond_5">5. We do not guarantee that a potential donor will agree to donate blood whenever called upon to do so. It is entirely at the discretion of the individual whether or not to donate blood.</string>
    <string name="cond_6">6. We does not claim that potential donors are free from any disease, ailment, or bodily conditions preventing them from donating blood at the time when they are contacted for blood donation. Onus is completely on the individual looking for blood to verify these details from the donor.</string>
    <string name="cond_7">7. We urge you not to make false registrations if you do not seriously wish to donate blood. It is a matter of life and death for those in need of blood in an emergency or otherwise.</string>
    <string name="cond_8">8. We reserves right to inactivate member at any given time in case found wrong information given or misuse of service</string>
    <string name="pager1_1"> Over 1200 road crashes and around 500 million surgeries and operations every day require large quantities of blood daily.</string>
    <string name="pager_2">Shortage of blood leads to poor maternal and infant mortality rate and affects health rate.</string>

</resources>
