<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_add_request"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/add_request" />

        <item
            android:id="@+id/nav_see_requests"
            android:icon="@drawable/ic_invert_colors_black_24dp"
            android:title="@string/see_request" />


        <item
            android:id="@+id/nav_terms_conditions"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/terms_conditions" />

        <item
            android:id="@+id/nav_guidelines"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/Guidelines" />


    </group>

    <item android:title="Manage">
        <menu>

            <item
                android:id="@+id/nav_my_record"
                android:icon="@drawable/ic_archive_black_24dp"
                android:title="@string/my_record" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings" />

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_assignment_black_24dp"
                android:title="@string/profile" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_assignment_black_24dp"
                android:title="@string/logout" />
        </menu>

    </item>
</menu>