<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Guidelines"
    >

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Guidelines"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:padding="10dp">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/guidelines"
    android:textAllCaps="false"
    android:textSize="18sp"
    android:textColor="@color/colorPrimary"
    android:textStyle="normal|bold"
    android:fontFamily="@font/rajdhani_medium"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/over_all_health"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal|bold"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rambla_bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/over_all_health_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age_and_weight"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal|bold"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rambla_bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age_and_weight_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pulse_rate"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal|bold"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rambla_bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pulse_rate_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hemoglobin_level"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal|bold"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rambla_bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hemoglobin_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blood_pressure"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal|bold"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rambla_bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diastolic"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/systolic"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body_temperature"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal|bold"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rambla_bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body_temperature_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_period"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal|bold"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rambla_bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_period_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guideline2"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal|bold"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rajdhani_medium"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guideline3"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guideline4"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guideline5"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guideline6"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guideline7"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guideline8"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guideline9"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guideline10"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guideline11"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guideline12"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        />

</LinearLayout>
</ScrollView>