<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:layout_margin="16dp"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#000"
        android:textStyle="bold|normal"
        />

    <Switch
        android:id="@+id/notification_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:gravity="left"
        android:text="@string/sms"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
     />

    <Switch
        android:id="@+id/notification_emails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:gravity="left"
        android:text="@string/emails"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"

        />

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/availability"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#000"
        android:textStyle="bold|normal"
        />

    <Switch
        android:id="@+id/available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:gravity="left"
        android:text="@string/available"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        />

</LinearLayout>