<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg4"
    tools:context=".MainActivity">

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/drop"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        />


    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:layout_below="@+id/logo"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/rambla_bold"/>


    <TextView
        android:id="@+id/tag_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_tag"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:layout_below="@+id/text_app_name"
        android:layout_centerInParent="true"
        android:fontFamily="@font/rajdhani_medium"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textStyle="italic"
        />


    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerInParent="true"
        android:background="@drawable/button_box_white"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />



</RelativeLayout>